# r-schc

./: Cargo.toml
crates/schc-core/: Cargo.toml
crates/schc-core/src/: error.rs  lib.rs
crates/schc-core/src/bit/: mod.rs  reader.rs  writer.rs
crates/schc-core/src/compress/: engine.rs  mod.rs
crates/schc-core/src/decompress/: engine.rs  mod.rs
crates/schc-core/src/packet/: builder.rs  checksum.rs  coap.rs  field.rs  icmpv6.rs  ipv6.rs  length.rs  mod.rs  traversal.rs  udp.rs
crates/schc-core/src/rule/: load.rs  mod.rs  model.rs
crates/schc-core/src/sid/: mod.rs  registry.rs
crates/schc-core/src/tree/: build.rs  mod.rs  model.rs
crates/schc-core/tests/: core_corpus.rs  core_roundtrip.rs  core_semantics.rs  coreconf_cbor_parity.rs  coreconf_sid_compat.rs  generic_payload.rs  packet_codecs.rs  rule_loading.rs  standard_vectors.rs
crates/schc-runtime/: Cargo.toml
crates/schc-runtime/src/: lib.rs  linux_tun.rs  packet.rs  udp.rs
crates/schc-runtime/tests/: core_runtime_corpus.rs  linux_tun_smoke.rs  node_process.rs  node_runtime.rs  packet_transport.rs  udp_transport.rs
crates/schc-runtime/tests/support/: mod.rs
fixtures/core/: core.json  core.sor  ietf-schc@2026-05-07.sid  vectors.json
fixtures/expected/: coap_get.schc  coap_path_payload.schc  icmpv6_echo.schc
fixtures/rules/: coap_option_by_number.json  dynamic_coap.json  icmpv6_echo.json  m2m.json  udp_coap.json  udp_payload.json
fixtures/sid/: generic-payload.sid.json  ietf-schc.sid.json  minimal.sid.json
tools/: regenerate_core_sor.py
