[package]
name = "schc-runtime"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
clap = { version = "=4.5.50", features = ["derive"] }
schc-core = { path = "../schc-core" }
thiserror = "1"

[target.'cfg(target_os = "linux")'.dependencies]
tappers = "=0.4.2"

[dev-dependencies]
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lints]
workspace = true
